Update Excel Generator URL

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <span class="image">
             <img src="images/pic02.jpg" alt="Excel Generator" />
           </span>
-          <a target="_blank" href="https://chat.openai.com/g/g-tCfHqANl9-teamgpt">
+          <a target="_blank" href="https://chatgpt.com/g/g-rhTdDpH8P-excel-generator">
             <div class="avatar">
               <img src="images/excel_generator.png" alt="Excel Generator">
             </div>
